# Hackeurope

./: .gitignore  CLAUDE.md  LICENSE  README.md
backend/: .env.example  README.md  cost_tracker.py  main.py  pdf_export.py  pipeline.py  pyproject.toml  requirements.txt  test_agent2.py  test_agent2_simulated.py  test_pipeline_timing.py
backend/agents/: __init__.py  drafting.py  history.py  recon.py  strategy.py
backend/agents/prompts/: README.md
backend/src/: __init__.py  main.py  server.py
backend/src/agents/: __init__.py
backend/src/agents/agent_1_watcher/: __init__.py  node.py
backend/src/agents/agent_2_precedents/: __init__.py  node.py
backend/src/agents/agent_3_scorer/: __init__.py  node.py
backend/src/agents/agent_4_strategist/: __init__.py  node.py
backend/src/agents/agent_5_cfo/: __init__.py  node.py
backend/src/agents/agent_6_hijacker/: __init__.py  node.py
backend/src/clients/: __init__.py  jina_client.py  llm_client.py  tavily_client.py
backend/src/graph/: __init__.py  state.py  workflow.py
backend/src/shared/: __init__.py  config.py  types.py
backend/src/shared/prompts/: __init__.py  severity.py  viral_coef.py
backend/src/utils/: __init__.py  paid_helpers.py
backend/static/: index.html
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: AgentScene.tsx  ArticleDiscoveryPage.tsx  DraftViewerPage.tsx  InvoicePage.tsx  LandingPage.tsx  PrecedentsPage.tsx  StrategyPage.tsx
frontend/src/data/: demoData.ts
scripts/: capture-demo-data.py
(+11 files in other folders)
